--- a/Vacation_Search/Vacation_Search.ipynb
+++ b/Vacation_Search/Vacation_Search.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b3821f34",
+   "id": "b9bd9374",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4e9f43f8",
+   "id": "de26fad1",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b99ce8b6",
+   "id": "138ebac0",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ca8170ac",
+   "id": "b7c58670",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5e84d1c6",
+   "id": "733b01f9",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ac72bd17",
+   "id": "c15aad03",
    "metadata": {},
    "outputs": [
     {
@@ -755,8 +755,533 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "14c9b9e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Current Description</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Mahebourg</td>\n",
+       "      <td>MU</td>\n",
+       "      <td>79.09</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "      <td>-20.4081</td>\n",
+       "      <td>57.7000</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Castro</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>77.88</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-24.7911</td>\n",
+       "      <td>-50.0119</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Hobyo</td>\n",
+       "      <td>SO</td>\n",
+       "      <td>79.05</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>5.3505</td>\n",
+       "      <td>48.5268</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Rikitea</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>77.49</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>-23.1203</td>\n",
+       "      <td>-134.9692</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Riohacha</td>\n",
+       "      <td>CO</td>\n",
+       "      <td>86.63</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>11.5444</td>\n",
+       "      <td>-72.9072</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Samarai</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>81.77</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-10.6167</td>\n",
+       "      <td>150.6667</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Sao Filipe</td>\n",
+       "      <td>CV</td>\n",
+       "      <td>75.65</td>\n",
+       "      <td>few clouds</td>\n",
+       "      <td>14.8961</td>\n",
+       "      <td>-24.4956</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Bandarbeyla</td>\n",
+       "      <td>SO</td>\n",
+       "      <td>77.11</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>9.4942</td>\n",
+       "      <td>50.8122</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Georgetown</td>\n",
+       "      <td>MY</td>\n",
+       "      <td>81.90</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "      <td>5.4112</td>\n",
+       "      <td>100.3354</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Sao Joao Da Barra</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>86.09</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>-21.6403</td>\n",
+       "      <td>-41.0511</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Atuona</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>78.67</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "      <td>-9.8000</td>\n",
+       "      <td>-139.0333</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Bonthe</td>\n",
+       "      <td>SL</td>\n",
+       "      <td>82.18</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>7.5264</td>\n",
+       "      <td>-12.5050</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Cidreira</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>75.43</td>\n",
+       "      <td>few clouds</td>\n",
+       "      <td>-30.1811</td>\n",
+       "      <td>-50.2056</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>Butaritari</td>\n",
+       "      <td>KI</td>\n",
+       "      <td>82.08</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>3.0707</td>\n",
+       "      <td>172.7902</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Nabire</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>76.80</td>\n",
+       "      <td>light rain</td>\n",
+       "      <td>-3.3667</td>\n",
+       "      <td>135.4833</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>Lethem</td>\n",
+       "      <td>GY</td>\n",
+       "      <td>88.25</td>\n",
+       "      <td>moderate rain</td>\n",
+       "      <td>3.3803</td>\n",
+       "      <td>-59.7968</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>Banda Aceh</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>79.45</td>\n",
+       "      <td>few clouds</td>\n",
+       "      <td>5.5577</td>\n",
+       "      <td>95.3222</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>Patrocinio</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>80.96</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-18.9439</td>\n",
+       "      <td>-46.9925</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>Sal Rei</td>\n",
+       "      <td>CV</td>\n",
+       "      <td>75.76</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>16.1833</td>\n",
+       "      <td>-22.9167</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>Tomatlan</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>87.75</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "      <td>19.9333</td>\n",
+       "      <td>-105.2500</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>Saint-Philippe</td>\n",
+       "      <td>RE</td>\n",
+       "      <td>78.39</td>\n",
+       "      <td>light rain</td>\n",
+       "      <td>-21.3585</td>\n",
+       "      <td>55.7679</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>Vaini</td>\n",
+       "      <td>TO</td>\n",
+       "      <td>75.36</td>\n",
+       "      <td>light rain</td>\n",
+       "      <td>-21.2000</td>\n",
+       "      <td>-175.2000</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>Salalah</td>\n",
+       "      <td>OM</td>\n",
+       "      <td>77.09</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>17.0151</td>\n",
+       "      <td>54.0924</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>Bathsheba</td>\n",
+       "      <td>BB</td>\n",
+       "      <td>77.61</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>13.2167</td>\n",
+       "      <td>-59.5167</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>Acarau</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>87.71</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-2.8856</td>\n",
+       "      <td>-40.1200</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>Kapaa</td>\n",
+       "      <td>US</td>\n",
+       "      <td>75.52</td>\n",
+       "      <td>few clouds</td>\n",
+       "      <td>22.0752</td>\n",
+       "      <td>-159.3190</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>Namatanai</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>79.32</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-3.6667</td>\n",
+       "      <td>152.4333</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>Rio Verde De Mato Grosso</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>81.19</td>\n",
+       "      <td>moderate rain</td>\n",
+       "      <td>-18.9181</td>\n",
+       "      <td>-54.8442</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>Belmonte</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>82.90</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>-15.8631</td>\n",
+       "      <td>-38.8828</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>Avarua</td>\n",
+       "      <td>CK</td>\n",
+       "      <td>77.05</td>\n",
+       "      <td>light rain</td>\n",
+       "      <td>-21.2078</td>\n",
+       "      <td>-159.7750</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        City Country  Max Temp Current Description      Lat  \\\n",
+       "6                  Mahebourg      MU     79.09    scattered clouds -20.4081   \n",
+       "8                     Castro      BR     77.88     overcast clouds -24.7911   \n",
+       "10                     Hobyo      SO     79.05       broken clouds   5.3505   \n",
+       "12                   Rikitea      PF     77.49       broken clouds -23.1203   \n",
+       "13                  Riohacha      CO     86.63     overcast clouds  11.5444   \n",
+       "23                   Samarai      PG     81.77     overcast clouds -10.6167   \n",
+       "24                Sao Filipe      CV     75.65          few clouds  14.8961   \n",
+       "25               Bandarbeyla      SO     77.11           clear sky   9.4942   \n",
+       "27                Georgetown      MY     81.90    scattered clouds   5.4112   \n",
+       "28         Sao Joao Da Barra      BR     86.09       broken clouds -21.6403   \n",
+       "31                    Atuona      PF     78.67    scattered clouds  -9.8000   \n",
+       "32                    Bonthe      SL     82.18       broken clouds   7.5264   \n",
+       "33                  Cidreira      BR     75.43          few clouds -30.1811   \n",
+       "36                Butaritari      KI     82.08     overcast clouds   3.0707   \n",
+       "37                    Nabire      ID     76.80          light rain  -3.3667   \n",
+       "41                    Lethem      GY     88.25       moderate rain   3.3803   \n",
+       "51                Banda Aceh      ID     79.45          few clouds   5.5577   \n",
+       "53                Patrocinio      BR     80.96     overcast clouds -18.9439   \n",
+       "57                   Sal Rei      CV     75.76       broken clouds  16.1833   \n",
+       "58                  Tomatlan      MX     87.75    scattered clouds  19.9333   \n",
+       "61            Saint-Philippe      RE     78.39          light rain -21.3585   \n",
+       "63                     Vaini      TO     75.36          light rain -21.2000   \n",
+       "65                   Salalah      OM     77.09           clear sky  17.0151   \n",
+       "68                 Bathsheba      BB     77.61       broken clouds  13.2167   \n",
+       "71                    Acarau      BR     87.71     overcast clouds  -2.8856   \n",
+       "72                     Kapaa      US     75.52          few clouds  22.0752   \n",
+       "73                 Namatanai      PG     79.32     overcast clouds  -3.6667   \n",
+       "76  Rio Verde De Mato Grosso      BR     81.19       moderate rain -18.9181   \n",
+       "77                  Belmonte      BR     82.90       broken clouds -15.8631   \n",
+       "83                    Avarua      CK     77.05          light rain -21.2078   \n",
+       "\n",
+       "         Lng Hotel Name  \n",
+       "6    57.7000             \n",
+       "8   -50.0119             \n",
+       "10   48.5268             \n",
+       "12 -134.9692             \n",
+       "13  -72.9072             \n",
+       "23  150.6667             \n",
+       "24  -24.4956             \n",
+       "25   50.8122             \n",
+       "27  100.3354             \n",
+       "28  -41.0511             \n",
+       "31 -139.0333             \n",
+       "32  -12.5050             \n",
+       "33  -50.2056             \n",
+       "36  172.7902             \n",
+       "37  135.4833             \n",
+       "41  -59.7968             \n",
+       "51   95.3222             \n",
+       "53  -46.9925             \n",
+       "57  -22.9167             \n",
+       "58 -105.2500             \n",
+       "61   55.7679             \n",
+       "63 -175.2000             \n",
+       "65   54.0924             \n",
+       "68  -59.5167             \n",
+       "71  -40.1200             \n",
+       "72 -159.3190             \n",
+       "73  152.4333             \n",
+       "76  -54.8442             \n",
+       "77  -38.8828             \n",
+       "83 -159.7750             "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 5a. Create DataFrame called hotel_df to store hotel names along with city, country, max temp, and coordinates.\n",
+    "hotel_df = preferred_cities_clean_df[[\"City\", \"Country\", \"Max Temp\", \"Current Description\", \"Lat\", \"Lng\"]].copy()\n",
+    "\n",
+    "# 5b. Create a new column \"Hotel Name\"\n",
+    "hotel_df[\"Hotel Name\"] = \"\"\n",
+    "hotel_df.head(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2d143421",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hotel not found... skipping\n",
+      "Hotel not found... skipping\n",
+      "Hotel not found... skipping\n",
+      "Hotel not found... skipping\n",
+      "Hotel not found... skipping\n",
+      "Hotel not found... skipping\n",
+      "Hotel not found... skipping\n",
+      "Hotel not found... skipping\n",
+      "Hotel not found... skipping\n",
+      "Hotel not found... skipping\n",
+      "Hotel not found... skipping\n",
+      "Hotel not found... skipping\n",
+      "Hotel not found... skipping\n",
+      "Hotel not found... skipping\n",
+      "Hotel not found... skipping\n",
+      "Hotel not found... skipping\n",
+      "Hotel not found... skipping\n",
+      "Hotel not found... skipping\n",
+      "Hotel not found... skipping\n",
+      "Hotel not found... skipping\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6a. Set parameters to search for hotels with 5000 meters.\n",
+    "params = {\n",
+    "    \"radius\": 5000,\n",
+    "    \"type\": \"lodging\",\n",
+    "    \"key\": g_key\n",
+    "}\n",
+    "\n",
+    "# 6b. Iterate through the hotel DataFrame.\n",
+    "for index, row in hotel_df.iterrows():\n",
+    "    # 6c. Get latitude and longitude from DataFrame\n",
+    "    lat=row['Lat']\n",
+    "    lng=row['Lng']\n",
+    "    params['location'] = f\"{lat},{lng}\"\n",
+    "    \n",
+    "    # 6d. Set up the base URL for the Google Directions API to get JSON data.\n",
+    "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "\n",
+    "    # 6e. Make request and retrieve the JSON data from the search. \n",
+    "    hotels = requests.get(base_url, params=params).json()\n",
+    "    \n",
+    "    # 6f. Get the first hotel from the results and store the name, if a hotel isn't found skip the city.\n",
+    "    try:\n",
+    "        hotel_df.loc[index, \"Hotel Name\"] = hotels[\"results\"][0][\"name\"]\n",
+    "    except (IndexError):\n",
+    "        print('Hotel not found... skipping')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "373fe320",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City                   183\n",
+       "Country                183\n",
+       "Max Temp               183\n",
+       "Current Description    183\n",
+       "Lat                    183\n",
+       "Lng                    183\n",
+       "Hotel Name             183\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 7. Drop the rows where there is no Hotel Name.\n",
+    "clean_hotel_df = hotel_df[hotel_df['Hotel Name'] != '']\n",
+    "clean_hotel_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0f140c37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 8a. Create the output File (CSV)\n",
+    "output_data_file = 'WeatherPy_vacation.csv'\n",
+    "# 8b. Export the City_Data into a csv\n",
+    "clean_hotel_df.to_csv(output_data_file, index_label=\"City_ID\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "01cabd4a",
+   "id": "52ae66df",
    "metadata": {},
    "outputs": [],
    "source": []
