--- a/Vacation_Itinerary/Vacation_Itinerary.ipynb
+++ b/Vacation_Itinerary/Vacation_Itinerary.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,31 +27,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. Read the WeatherPy_vacation.csv into a DataFrame.\n",
-    "# vacation_df = pd.read_csv(\"Vacation_Search/WeatherPy_vacation.csv\")\n",
-    "# vacation_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Current Description</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Hermanus</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>67.89</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-34.4187</td>\n",
+       "      <td>19.2345</td>\n",
+       "      <td>Misty Waves Boutique Hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Mahebourg</td>\n",
+       "      <td>MU</td>\n",
+       "      <td>79.09</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "      <td>-20.4081</td>\n",
+       "      <td>57.7000</td>\n",
+       "      <td>Shandrani Beachcomber Resort &amp; Spa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Castro</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>77.88</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-24.7911</td>\n",
+       "      <td>-50.0119</td>\n",
+       "      <td>CHACARA BAILLY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Hobyo</td>\n",
+       "      <td>SO</td>\n",
+       "      <td>79.05</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>5.3505</td>\n",
+       "      <td>48.5268</td>\n",
+       "      <td>Halane Hotel and Restaurent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Rikitea</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>77.49</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>-23.1203</td>\n",
+       "      <td>-134.9692</td>\n",
+       "      <td>People ThankYou</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City_ID       City Country  Max Temp Current Description      Lat  \\\n",
+       "0        2   Hermanus      ZA     67.89     overcast clouds -34.4187   \n",
+       "1        6  Mahebourg      MU     79.09    scattered clouds -20.4081   \n",
+       "2        8     Castro      BR     77.88     overcast clouds -24.7911   \n",
+       "3       10      Hobyo      SO     79.05       broken clouds   5.3505   \n",
+       "4       12    Rikitea      PF     77.49       broken clouds -23.1203   \n",
+       "\n",
+       "        Lng                          Hotel Name  \n",
+       "0   19.2345          Misty Waves Boutique Hotel  \n",
+       "1   57.7000  Shandrani Beachcomber Resort & Spa  \n",
+       "2  -50.0119                      CHACARA BAILLY  \n",
+       "3   48.5268         Halane Hotel and Restaurent  \n",
+       "4 -134.9692                     People ThankYou  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 2. Using the template add the city name, the country code, the weather description and maximum temperature for the city.\n",
-    "info_box_template = \"\"\"\n",
-    "\n",
-    "\"\"\"\n",
-    "\n",
-    "# 3a. Get the data from each row and add it to the formatting template and store the data in a list.\n",
-    "hotel_info = [info_box_template.format(**row) for index, row in clean_hotel_df.iterrows()]\n",
-    "\n",
-    "# 3b. Get the latitude and longitude from each row and store in a new DataFrame.\n",
-    "locations = clean_hotel_df[[\"Lat\", \"Lng\"]]"
+    "# 1. Read the WeatherPy_vacation.csv into a DataFrame.\n",
+    "vacation_df = pd.read_csv(\"../Vacation_Search/WeatherPy_vacation.csv\")\n",
+    "vacation_df.head()"
    ]
   },
   {
@@ -60,9 +154,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4a. Add a marker layer for each city to the map.\n",
+    "# 2. Using the template add the city name, the country code, the weather description and maximum temperature for the city.\n",
+    "info_box_template = \"\"\"\n",
+    "<dl>\n",
+    "<dt>Hotel Name</dt><dd>{Hotel Name}</dd>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>Weather Description</dt><dd>{Current Description}</dd>\n",
+    "<dt>Max Temp</dt><dd>{Max Temp} °F</dd>\n",
+    "</dl>\n",
+    "\"\"\"\n",
     "\n",
+    "# 3a. Get the data from each row and add it to the formatting template and store the data in a list.\n",
+    "vacation_info = [info_box_template.format(**row) for index, row in vacation_df.iterrows()]\n",
+    "\n",
+    "# 3b. Get the latitude and longitude from each row and store in a new DataFrame.\n",
+    "locations = vacation_df[[\"Lat\", \"Lng\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "abdc69d537b54f0da3399b834eedee7e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 4a. Add a marker layer for each city to the map.\n",
+    "locations = vacation_df[[\"Lat\", \"Lng\"]]\n",
+    "max_temp = vacation_df[\"Max Temp\"]\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=max_temp,dissipating=False,\n",
+    "             max_intensity=300, point_radius=4)\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=vacation_info)\n",
+    "fig.add_layer(heat_layer)\n",
+    "fig.add_layer(marker_layer)\n",
     "# 4b. Display the figure\n",
+    "fig\n",
     "\n"
    ]
   },
@@ -76,11 +217,16 @@
     "# 5. Create DataFrames for each city by filtering the 'vacation_df' using the loc method. \n",
     "# Hint: The starting and ending city should be the same city.\n",
     "\n",
-    "vacation_start = vacation_df.loc[]\n",
-    "vacation_end = vacation_df.loc[]\n",
-    "vacation_stop1 = vacation_df.loc[]\n",
-    "vacation_stop2 = vacation_df.loc[] \n",
-    "vacation_stop3 = vacation_df.loc[] "
+    "vacation_start = vacation_df.loc[(vacation_df['City']=='Elizabeth City')\n",
+    "                                & (vacation_df['Hotel Name']=='Hampton Inn Elizabeth City')]\n",
+    "vacation_end = vacation_df.loc[(vacation_df['City']=='Elizabeth City')\n",
+    "                              & (vacation_df['Hotel Name']=='Hampton Inn Elizabeth City')]\n",
+    "vacation_stop1 = vacation_df.loc[(vacation_df['City']=='Southern Pines')\n",
+    "                              & (vacation_df['Hotel Name']=='Holiday Inn Express & Suites Southern Pines-Pinehurst Area')]\n",
+    "vacation_stop2 = vacation_df.loc[(vacation_df['City']=='Charleston')\n",
+    "                                & (vacation_df['Hotel Name']=='The Mills House Wyndham Grand Hotel')] \n",
+    "vacation_stop3 = vacation_df.loc[(vacation_df['City']=='Havelock')\n",
+    "                                & (vacation_df['Hotel Name']=='Sherwood Motel')] "
    ]
   },
   {
@@ -175,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.11"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
