update vacation code

--- a/Vacation_Itinerary/Vacation_Itinerary.ipynb
+++ b/Vacation_Itinerary/Vacation_Itinerary.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -97,6 +97,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Busselton</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>52.05</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>-33.6500</td>\n",
+       "      <td>115.3333</td>\n",
+       "      <td>Observatory Guest House</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>10</td>\n",
        "      <td>Hobyo</td>\n",
        "      <td>SO</td>\n",
@@ -105,17 +116,6 @@
        "      <td>5.3505</td>\n",
        "      <td>48.5268</td>\n",
        "      <td>Halane Hotel and Restaurent</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>12</td>\n",
-       "      <td>Rikitea</td>\n",
-       "      <td>PF</td>\n",
-       "      <td>77.49</td>\n",
-       "      <td>broken clouds</td>\n",
-       "      <td>-23.1203</td>\n",
-       "      <td>-134.9692</td>\n",
-       "      <td>People ThankYou</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -126,18 +126,18 @@
        "0        2   Hermanus      ZA     67.89     overcast clouds -34.4187   \n",
        "1        6  Mahebourg      MU     79.09    scattered clouds -20.4081   \n",
        "2        8     Castro      BR     77.88     overcast clouds -24.7911   \n",
-       "3       10      Hobyo      SO     79.05       broken clouds   5.3505   \n",
-       "4       12    Rikitea      PF     77.49       broken clouds -23.1203   \n",
+       "3        9  Busselton      AU     52.05       broken clouds -33.6500   \n",
+       "4       10      Hobyo      SO     79.05       broken clouds   5.3505   \n",
        "\n",
        "        Lng                          Hotel Name  \n",
        "0   19.2345          Misty Waves Boutique Hotel  \n",
        "1   57.7000  Shandrani Beachcomber Resort & Spa  \n",
        "2  -50.0119                      CHACARA BAILLY  \n",
-       "3   48.5268         Halane Hotel and Restaurent  \n",
-       "4 -134.9692                     People ThankYou  "
+       "3  115.3333             Observatory Guest House  \n",
+       "4   48.5268         Halane Hotel and Restaurent  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,6 @@
     "<dt>Max Temp</dt><dd>{Max Temp} °F</dd>\n",
     "</dl>\n",
     "\"\"\"\n",
-    "\n",
     "# 3a. Get the data from each row and add it to the formatting template and store the data in a list.\n",
     "vacation_info = [info_box_template.format(**row) for index, row in vacation_df.iterrows()]\n",
     "\n",
@@ -174,13 +173,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "abdc69d537b54f0da3399b834eedee7e",
+       "model_id": "4fe4b6eb1dac4afda8e16751d5ac5203",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,13 +202,12 @@
     "fig.add_layer(heat_layer)\n",
     "fig.add_layer(marker_layer)\n",
     "# 4b. Display the figure\n",
-    "fig\n",
-    "\n"
+    "fig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,84 +215,258 @@
     "# 5. Create DataFrames for each city by filtering the 'vacation_df' using the loc method. \n",
     "# Hint: The starting and ending city should be the same city.\n",
     "\n",
-    "vacation_start = vacation_df.loc[(vacation_df['City']=='Elizabeth City')\n",
-    "                                & (vacation_df['Hotel Name']=='Hampton Inn Elizabeth City')]\n",
-    "vacation_end = vacation_df.loc[(vacation_df['City']=='Elizabeth City')\n",
-    "                              & (vacation_df['Hotel Name']=='Hampton Inn Elizabeth City')]\n",
-    "vacation_stop1 = vacation_df.loc[(vacation_df['City']=='Southern Pines')\n",
-    "                              & (vacation_df['Hotel Name']=='Holiday Inn Express & Suites Southern Pines-Pinehurst Area')]\n",
-    "vacation_stop2 = vacation_df.loc[(vacation_df['City']=='Charleston')\n",
-    "                                & (vacation_df['Hotel Name']=='The Mills House Wyndham Grand Hotel')] \n",
-    "vacation_stop3 = vacation_df.loc[(vacation_df['City']=='Havelock')\n",
-    "                                & (vacation_df['Hotel Name']=='Sherwood Motel')] "
+    "vacation_start = vacation_df.loc[(vacation_df['City']=='Sunland Park')\n",
+    "                                & (vacation_df['Hotel Name']=='SpringHill Suites by Marriott El Paso')]\n",
+    "vacation_end = vacation_df.loc[(vacation_df['City']=='San Patricio')\n",
+    "                              & (vacation_df['Hotel Name']=='Motel 6 Sinton, TX')]\n",
+    "vacation_stop1 = vacation_df.loc[(vacation_df['City']=='Atambua')\n",
+    "                              & (vacation_df['Hotel Name']=='Pastori 1 Jemaat Polycarpus')]\n",
+    "vacation_stop2 = vacation_df.loc[(vacation_df['City']=='Don Sak')\n",
+    "                                & (vacation_df['Hotel Name']=='Sea Sun Moon Hostel')] \n",
+    "vacation_stop3 = vacation_df.loc[(vacation_df['City']=='Maturin')\n",
+    "                                & (vacation_df['Hotel Name']=='Hotel Residencial La Pichincha')] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[  31.7965, -106.58  ]]),\n",
+       " array([[ -9.1061, 124.8925]]),\n",
+       " array([[ 9.3168, 99.6918]]),\n",
+       " array([[  9.75  , -63.1767]]))"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 6. Get the latitude-longitude pairs as tuples from each city DataFrame using the to_numpy function and list indexing.\n",
+    "start = pd.DataFrame(vacation_start[[\"Lat\", \"Lng\"]]).to_numpy()\n",
+    "end = pd.DataFrame(vacation_end[[\"Lat\", \"Lng\"]]).to_numpy()\n",
+    "stop1 = pd.DataFrame(vacation_stop1[[\"Lat\", \"Lng\"]]).to_numpy()\n",
+    "stop2 = pd.DataFrame(vacation_stop2[[\"Lat\", \"Lng\"]]).to_numpy()\n",
+    "stop3 = pd.DataFrame(vacation_stop3[[\"Lat\", \"Lng\"]]).to_numpy()\n",
+    "start, stop1, stop2, stop3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 6. Get the latitude-longitude pairs as tuples from each city DataFrame using the to_numpy function and list indexing.\n",
-    "start = \n",
-    "end = \n",
-    "stop1 = \n",
-    "stop2 = \n",
-    "stop3 = "
+    "# add the latitude/longitude\n",
+    "start=(31.7965, -106.58)\n",
+    "end=(31.7965, -106.58)\n",
+    "stop1=(-9.1061 , 124.8925)\n",
+    "stop2=(9.3168, 99.6918)\n",
+    "stop3=(9.75, -63.1767)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "26b5dc2f59824bddad1a221bad33cf16",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 7. Create a direction layer map using the start and end latitude-longitude pairs,\n",
     "# and stop1, stop2, and stop3 as the waypoints. The travel_mode should be \"DRIVING\", \"BICYCLING\", or \"WALKING\".\n",
+    "fig = gmaps.figure()\n",
+    "itinerary_trip_plan = gmaps.directions_layer(start,end, \n",
+    "                                             waypoints=[stop1,stop2,stop3],\n",
+    "                                             travel_mode=\"DRIVING\")\n",
+    "fig.add_layer(itinerary_trip_plan)\n",
+    "fig\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Current Description</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>641</td>\n",
+       "      <td>Sunland Park</td>\n",
+       "      <td>US</td>\n",
+       "      <td>55.81</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>31.7965</td>\n",
+       "      <td>-106.5800</td>\n",
+       "      <td>SpringHill Suites by Marriott El Paso</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>303</td>\n",
+       "      <td>Atambua</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>75.24</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-9.1061</td>\n",
+       "      <td>124.8925</td>\n",
+       "      <td>Pastori 1 Jemaat Polycarpus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>580</td>\n",
+       "      <td>Don Sak</td>\n",
+       "      <td>TH</td>\n",
+       "      <td>74.07</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "      <td>9.3168</td>\n",
+       "      <td>99.6918</td>\n",
+       "      <td>Sea Sun Moon Hostel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>251</td>\n",
+       "      <td>Maturin</td>\n",
+       "      <td>VE</td>\n",
+       "      <td>80.78</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>9.7500</td>\n",
+       "      <td>-63.1767</td>\n",
+       "      <td>Hotel Residencial La Pichincha</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City_ID          City Country  Max Temp Current Description      Lat  \\\n",
+       "0      641  Sunland Park      US     55.81           clear sky  31.7965   \n",
+       "1      303       Atambua      ID     75.24     overcast clouds  -9.1061   \n",
+       "2      580       Don Sak      TH     74.07    scattered clouds   9.3168   \n",
+       "3      251       Maturin      VE     80.78     overcast clouds   9.7500   \n",
+       "\n",
+       "        Lng                             Hotel Name  \n",
+       "0 -106.5800  SpringHill Suites by Marriott El Paso  \n",
+       "1  124.8925            Pastori 1 Jemaat Polycarpus  \n",
+       "2   99.6918                    Sea Sun Moon Hostel  \n",
+       "3  -63.1767         Hotel Residencial La Pichincha  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 8. To create a marker layer map between the four cities.\n",
     "#  Combine the four city DataFrames into one DataFrame using the concat() function.\n",
-    "itinerary_df = pd.concat([],ignore_index=True)\n",
+    "itinerary_df = pd.concat([vacation_start, vacation_stop1, vacation_stop2, vacation_stop3],ignore_index=True)\n",
     "itinerary_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 9 Using the template add city name, the country code, the weather description and maximum temperature for the city. \n",
     "info_box_template = \"\"\"\n",
-    "\n",
+    "<dt>Hotel Name</dt><dd>{Hotel Name}</dd>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>Weather Description</dt><dd>{Current Description}</dd>\n",
+    "<dt>Max Temp</dt><dd>{Max Temp} °F</dd>\n",
+    "</dl>\n",
     "\"\"\"\n",
     "\n",
     "# 10a Get the data from each row and add it to the formatting template and store the data in a list.\n",
-    "hotel_info = [info_box_template.format(**row) for index, row in itinerary_df.iterrows()]\n",
+    "itinerary_info = [info_box_template.format(**row) for index, row in itinerary_df.iterrows()]\n",
     "\n",
     "# 10b. Get the latitude and longitude from each row and store in a new DataFrame.\n",
-    "locations = itinerary_df[[\"Lat\", \"Lng\"]]"
+    "itinerary_locations = itinerary_df[[\"Lat\", \"Lng\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6315539cbfb24f018ba7deb24336e4a7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 11a. Add a marker layer for each city to the map.\n",
+    "itinerary_locations = itinerary_df[[\"Lat\", \"Lng\"]]\n",
+    "fig = gmaps.figure(center=(31.0, -106.0), zoom_level=5)\n",
+    "marker_layer = gmaps.marker_layer(itinerary_locations, info_box_content=itinerary_info)\n",
+    "fig.add_layer(marker_layer)\n",
     "\n",
-    "# 11b. Display the figure\n"
+    "# 11b. Display the figure\n",
+    "fig\n"
    ]
   },
   {
